# compiler

./: .gitignore  Installing LLVM.txt  README.md  run.bat
0-kaleidoscope/: main.cpp
0-kaleidoscope/compiler/: expr.cpp  imports.cpp  util.cpp
1-river/: CMakeLists.txt  exp.bat  help.bat  main.cpp  run.bat
1-river-broken/: There  build.bat  run.bat
1-river-broken/tests/samples/: eg-def.river  eg-precedence.river  fib.river
1-river/compiler/: tokens.cpp
1-river/compiler/visitors/: stringify.cpp
1-river/tests/: diff.cpp  test-tokens.cpp
1-river/tests/samples/: eg-call.river  eg-control.river  eg-vars.river  tokens.river
2-kaleidoscope-ffi/0-llvm-cpp/: CMakeLists.txt  install.bat  main.cpp  run.bat
2-kaleidoscope-ffi/0-llvm-cpp/0-llvm-wrapper/: example.cpp  ir-gen.cpp  ir-gen.h  llvm-error.h  misc.cpp  misc.h
2-kaleidoscope-ffi/0-llvm-cpp/1-compiler/: ast.cpp  gen.cpp  tokens.cpp  visitor.h
2-kaleidoscope-ffi/0-llvm-cpp/1-compiler/visitors/: generator.cpp
2-kaleidoscope-ffi/1-kaleidoscope-rust/: Cargo.toml  build-parser.bat  build.rs  demo.via  run.bat  test-parser.bat
2-kaleidoscope-ffi/1-kaleidoscope-rust/src/: ansi.rs  ast.rs  grammar.lalrpop  lexer.rs  llvm_wrapper.rs  main.rs  terminal.rs  ui.rs
2-kaleidoscope-ffi/1-kaleidoscope-rust/src/compiler/: a-llvm_wrapper.rs  b-ast.rs  c-grammar.lalrpop  d-lexer.rs
2-kaleidoscope-ffi/1-kaleidoscope-rust/src/compiler/tree-sitter-via/: .gitignore  Cargo.toml  grammar.js  package-lock.json  package.json  parser.exp  parser.lib
2-kaleidoscope-ffi/1-kaleidoscope-rust/src/compiler/tree-sitter-via/corpus/: 00_comments.txt  01_block.txt  02-function_calls.txt
2-kaleidoscope-ffi/1-kaleidoscope-rust/src/compiler/tree-sitter-via/src/: grammar.json  node-types.json  parser.c
2-kaleidoscope-ffi/1-kaleidoscope-rust/src/editor/: a-extern.rs  b-colors.rs  c-input.rs  d-terminal.rs  e-document.rs  f-viewport.rs  g-state.rs  h-drawing.rs  h-fs.rs  i-actions.rs  j-editor.rs
2-kaleidoscope-ffi/2-syntax-tauri/syntax/: README.md
2-kaleidoscope-ffi/2-syntax-tauri/syntax/src/: index.html  main.js  styles.css
2-kaleidoscope-ffi/2-syntax-tauri/syntax/src-tauri/: .taurignore  Cargo.toml  save.json  tauri.conf.json
2-kaleidoscope-ffi/2-syntax-tauri/syntax/src-tauri/src/: main.rs
2-kaleidoscope-ffi/2-syntax-tauri/syntax/src/highlight/: DIGESTS.md  highlight.js  highlight.min.js
2-kaleidoscope-ffi/3-syntax-webui/: Cargo.toml  build.rs
2-kaleidoscope-ffi/3-syntax-webui/c-webui/: main.c
2-kaleidoscope-ffi/3-syntax-webui/src/: main.rs
3-via/0-vscode-extension/: CHANGELOG.md  README.md  convert.bat  package-lock.json  package.json
3-via/0-vscode-extension/subject/: test.html  test.via
3-via/0-vscode-extension/subject/examples/: vec2.via
3-via/0-vscode-extension/subject/examples/implementation/: async.via  lookups.via  type-matching.via
3-via/0-vscode-extension/subject/examples/implementation/memory/: 00-intro.via  01-types.via  02-control.via  03-buffers.via  04-dispatch.via  05-inheritence.via  06-traits.via  99-old.via
3-via/0-vscode-extension/subject/syntax/: 00-comments.via  01-whitespace.via  02-statements.via  03-paths.via  04-variables.via  05-control-flow.via  06-match.via  07-functions.via  08-types.via  09-literals.via  10-operators.via  11-generics.via
3-via/0-vscode-extension/syntaxes/: via.tmLanguage.json  via.tmLanguage.yaml
iteration-0/: build.bat  exp.bat
kaleidoscope/: .gitignore  CMakeLists.txt  a-tokens.cpp  b-ast.cpp  build.bat  c-parsing.cpp  installing llvm.txt  main.cpp  run.bat  test.cpp
kaleidoscope/compiler/: ast.cpp  ast.h  expr.cpp  gen.cpp  generation.cpp  imports.cpp  jit.cpp  parsing.cpp  tokens.cpp  util.cpp  utility.cpp  visitor.h
kaleidoscope/compiler/visitors/: generation.cpp  generator.cpp  stringify.cpp
llvm-setup/: Installing LLVM.txt  example-CMakeLists.txt  example-build.bat  example-run.bat  test-main.cpp
