[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20"
