[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2021"
include = [
  "src/compiler/tree-sitter-via/src/parser.c"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
